# nnue-rs

./: Cargo.toml  README.md
src/: layers.rs
src/stockfish/: halfkp.rs  mod.rs
tests/: works.rs
