[package]
name = "nnue"
version = "0.1.0"
authors = ["analog-hors <44050761+analog-hors@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = { version = "2", features = ["const_generics"] }
bytemuck = { version = "1", features = ["min_const_generics", "derive", "extern_crate_alloc"] }

[dev-dependencies]
seq-macro = "0.2.2"
